fix(voiceSearch): fix disabled color on safari

--- a/src/scss/themes/algolia.scss
+++ b/src/scss/themes/algolia.scss
@@ -650,6 +650,7 @@ a[class^='ais-'] {
 }
 
 .ais-VoiceSearch-button:disabled:hover {
+  color: lighten($port-gore, 40%);
   cursor: not-allowed;
   background: inherit;
 }
